# ffmpeg-arcana

./: .gitignore  CMakeLists.txt  README.md
ffmpeg_arcana/cmake_include/: copy_headers.cmake  create_ffmpeg_options_file.cmake  ffmpeg.cmake  ffmpeg_build_system.cmake  ffmpeg_modules.cmake  post_install.cmake  postprocess.cmake
forge/: README.md  genpatches.sh  toml-c.h
patches/: ffmpeg_arcana_patch_5.1.patch  ffmpeg_arcana_patch_6.0.patch  ffmpeg_arcana_patch_6.1.patch  ffmpeg_arcana_patch_7.0.patch  ffmpeg_arcana_patch_7.1.patch  ffmpeg_arcana_patch_8.0.patch
test_plugins/: CMakeLists.txt  README.md  arcana_loader.c  generic_encoder.cpp  generic_encoder.h  nut.c  nut.h  test_desc.c  test_desc.h  test_enc.c  test_enc.h  test_filter.c  test_filter.h  test_mux.c  test_mux.h  test_proto.c  test_proto.h
